* [changed] Use fog >= 0.3.0, fix deprecation warnings [Paul Elliott]
* [changed] Use mini_magick ~> 2.3, MiniMagick::Image.from_file becomes MiniMagick::Image.open [Fredrik Björk]
* [changed] Convert generic MiniMagick::Invalid into ProcessingError [Alex Crichton]
* [changed] Remove cached tmp file after storing for file store [Damien Mathieu]
* [added] Option to retain cached tmp file after storage (delete_tmp_file_after_storage) [Damien Mathieu]
* [added] Transparent support for authenticated_read on S3 [Jonas Nicklas]
* [fixed] Clean up internal require statements [Josh Kalderimis]
* [fixed] Header support for S3 [Alex Crichton]
* [fixed] Stack level too deep errors when using to_json [Trevor Turk]
* [fixed] Documentation for mount_uploader [Nathan Kleyn]

=== Version 0.5 2010-09-23

* [changed] Use ActiveModel instead of ActiveRecord validations to support Mongoid validations as well [Jeroen van Dijk, saberma]
* [changed] Support S3 file storage with the fog gem, instead of the aws gem (Trevor Turk)
* [changed] Move translations to a YAML file (Josh Kalderimis)
* [changed] Depend on activesupport ~> 3.0.0 instead of >= 3.0.0.rc (Trevor Turk)
* [changed] Remove old Merb and Rails generators, support Rails 3 generators (Jonas Nicklas, Trevor Turk)
* [changed] Replace Net::HTTP with open-url for remote file downloads (icebreaker)
* [changed] Move translations to a YAML file (Josh Kalderimis)
* [changed] Use gemspec to generate Gemfile contents (Jonas Nicklas)
* [added] Add file size support for S3 storage (Pavel Chipiga)
* [added] Add option for disabling multipart form check (Dennis Blöte)
* [fixed] Correct naming of validators (Josh Kalderimis)
* [fixed] Fix remote file downloader (Jonas Nicklas)
* [fixed] Escape URLs passed to remote file downloader so URLs with spaces work (Mauricio Zaffari)
* [fixed] Correct filename used in generators (Fred Wu)

=== Version 0.4.6 2010-07-20
